# fiber-gateway-cpp

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
cmake/: Deps.cmake  nghttp2-config.h.in
example/: http1_echo.cpp  http2_echo.cpp  http3_demo_lsquic.cpp  http_auto_echo.cpp  https_echo.cpp  tcp_echo.cpp  udp_echo.cpp
feature/: event.md  http1_parse.md  http1_server.md  http3_lsquic_demo.md  iobuf.md  signal.md  stream.md  stream_et.md  udp_socket.md  wait_group.md
scripts/: gen_http3_demo_cert.sh  run_http3_demo.sh
skills/code-format/: SKILL.md
skills/code-format/agents/: openai.yaml
skills/code-format/scripts/: format.sh
skills/cpp-performance-expert/: SKILL.md
skills/cpp-performance-expert/agents/: openai.yaml
skills/cpp-performance-expert/references/: perf-checklist.md
skills/cpp-performance-expert/scripts/: cmake-build-test.sh  cmake-tools.conf
src/async/: Mutex.cpp  Mutex.h  Signal.cpp  Signal.h  Sleep.h  Spawn.h  Task.h  Timeout.h  WaitGroup.cpp  WaitGroup.h
src/common/: IntrusiveList.h
src/common/mem/: BufPool.cpp  BufPool.h  IoBuf.cpp  IoBuf.h
src/event/: EventLoop.cpp  EventLoop.h  EventLoopGroup.cpp  Poller.cpp  Poller.h  SignalService.cpp
src/http/: HeadBuf.h  HeaderMap.h  Http1Body.cpp  Http1Body.h  Http1Connection.cpp  Http1Connection.h  Http1Context.cpp  Http1Context.h  Http1ExchangeIo.cpp  Http1ExchangeIo.h  Http1Parser.cpp  Http1Parser.h  Http1Server.cpp  Http1Server.h  Http2Connection.cpp  Http2Connection.h  Http2ExchangeIo.cpp  Http2ExchangeIo.h  Http2Pending.h  Http2PendingPool.cpp  Http2PendingPool.h  Http2Protocol.h  Http2SendPayload.cpp  Http2SendPayload.h  Http2SendingEntryQueue.cpp  Http2SendingEntryQueue.h  Http2Server.cpp  Http2Server.h  Http2Stream.cpp  Http2Stream.h  Http2StreamTable.cpp  Http2StreamTable.h  HttpCommon.h  HttpExchange.cpp  HttpExchange.h  HttpExchangeIo.h  HttpHeaders.cpp  HttpHeaders.h  HttpServer.cpp  HttpServer.h  (+8 more)
src/net/: IpAddress.cpp  IpAddress.h  TcpListener.cpp  TcpListener.h  TcpStream.cpp  TcpStream.h  TlsTcpStream.cpp  TlsTcpStream.h  UdpSocket.cpp  UdpSocket.h  UnixListener.cpp  UnixListener.h  UnixStream.cpp  UnixStream.h
src/net/detail/: AcceptFd.h  ConnectFd.h  DatagramFd.cpp  DatagramFd.h  Efd.cpp  Efd.h  RWFd.cpp  RWFd.h  StreamFd.cpp  StreamFd.h  TlsStreamFd.cpp  TlsStreamFd.h
tests/: EventLoopTest.cpp  Http1ParserTest.cpp  Http1ServerTest.cpp  Http2ConnectionTest.cpp  Http2StreamTableTest.cpp  IoBufTest.cpp  MutexTest.cpp  SignalTest.cpp  SleepTest.cpp  TcpListenerTest.cpp  TcpStreamTest.cpp  TestHelpers.h  TimeoutTest.cpp  TlsAlpnTest.cpp  UdpSocketTest.cpp  UnixStreamTest.cpp  WaitGroupTest.cpp
